# ReaConnect

./: .gitignore
.clinerules/: beginner-teaching-mode.md
.github/: copilot-instructions.md
backend/: README.md  pyproject.toml
backend/src/: __init__.py  _verify.py  app.py  chat_api.py  chat_history.py  server.py
backend/src/helpers/: __init__.py  conversation.py  mcp_config.py
backend/src/models/: __init__.py  chat.py
backend/src/routers/: __init__.py  chat.py  health.py
backend/src/services/: __init__.py  agent_service.py  chat_history.py  data_loader.py  query_engine.py
backend/src/tools/: __init__.py  server.py
backend/src/utils/: __init__.py  sse.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/components/: ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  ChatWindow.tsx  ToolEvent.tsx
frontend/src/lib/: chatApi.ts
frontend/src/theme/: theme.ts
